--- a/.backend.yml
+++ b/.backend.yml
@@ -14,6 +14,6 @@ stdout_log: debug
 stderr_log: warn
 
 http_proxy:
-  prefix: /lab/
-  target: http://localhost:8888
+  prefix: /
+  port: 8888
   strip_prefix: /web/apps/neo-jupyter/
