--- a/.backend.yml
+++ b/.backend.yml
@@ -14,6 +14,6 @@ stdout_log: debug
 stderr_log: warn
 
 http_proxy:
-  prefix: /
+  prefix: /base/
   port: 8888
-  strip_prefix: /web/apps/neo-jupyter/
+  strip_prefix:
